--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,6 +1,6 @@
 # Change these first
-owner: upptime # Your GitHub username
-repo: upptime # Your GitHub repository name
+owner: pavirp29 # Your GitHub username
+repo: status-page # Your GitHub repository name
 
 # Add your sites here
 sites:
